# GPU_computing

./: .gitignore  README.md
Assignments/Assignment_1/: .gitignore  CMakeLists.txt  README.md
Assignments/Assignment_1/src/: ahe_cpu.cpp  ahe_gpu.cpp  ahe_gpu_kernels.cu  defines.h  main.cpp
Assignments/Assignment_2/: CMakeLists.txt  README.md
Assignments/Assignment_2/analysis/: cpu_times.txt  errors.txt  errors_and_num_edges.txt  lab_server_results.txt
Assignments/Assignment_2/analysis/const/: results.txt  sdt_gpu_kernels.cu
Assignments/Assignment_2/analysis/iteration_1/: results.txt  sdt_gpu_kernels.cu
Assignments/Assignment_2/analysis/iteration_2/: result.txt  sdt_gpu_kernels.cu
Assignments/Assignment_2/analysis/iteration_3/: results.txt
Assignments/Assignment_2/analysis/iteration_5/: 1050Ti.txt  lab_server_results.txt
Assignments/Assignment_2/plots/: plot.py
Assignments/Assignment_2/src/: sdt_cpu.cpp  sdt_gpu.cpp  sdt_gpu_kernels.cu  utils.h
labs/lab_1/: 2018007_aditya.cu  time_taken.txt
labs/lab_2/: initialize1.cu  initialize2.cu  utils.h
labs/lab_2/doc/: lab2.tex
labs/lab_3/: .gitignore  CPU.txt  README.md  defines.h  matmul.cpp  matmul.cu  utils.h
labs/lab_4/: .gitignore  README.md  aos.cu  soa.cu
my_code/: utils.h
